[gd_scene load_steps=12 format=3 uid="uid://bnw12i4c7ptty"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_k0ni7"]
[ext_resource type="PackedScene" uid="uid://5afyrbpusfwv" path="res://scenes/player.tscn" id="2_01y8u"]
[ext_resource type="PackedScene" uid="uid://ci54a1ritodal" path="res://scenes/coin.tscn" id="2_tfwk0"]
[ext_resource type="Texture2D" uid="uid://bbjd2mg7glhnb" path="res://refs/assets/grass.png" id="2_wmn2l"]
[ext_resource type="PackedScene" uid="uid://yge36322dd4u" path="res://scenes/hud.tscn" id="3_kqmm4"]
[ext_resource type="PackedScene" uid="uid://bb44q1vsb82yo" path="res://scenes/powerup.tscn" id="3_mijy8"]
[ext_resource type="PackedScene" uid="uid://b4umnkc388l5c" path="res://scenes/cactus.tscn" id="4_0614o"]
[ext_resource type="AudioStream" uid="uid://dyma62nlfv4sj" path="res://refs/assets/audio/Coin.wav" id="6_i2ey1"]
[ext_resource type="AudioStream" uid="uid://bnsnqfhp1whu2" path="res://refs/assets/audio/EndSound.wav" id="8_646fj"]
[ext_resource type="AudioStream" uid="uid://dr0hxqhu0b2xd" path="res://refs/assets/audio/muito_mix.wav" id="9_axg54"]
[ext_resource type="AudioStream" uid="uid://deww20uhvbk8b" path="res://refs/assets/audio/Powerup.wav" id="9_ixcer"]

[node name="Main" type="Node"]
script = ExtResource("1_k0ni7")
coin_scene = ExtResource("2_tfwk0")
powerup = ExtResource("3_mijy8")
cactus = ExtResource("4_0614o")

[node name="HUD" parent="." instance=ExtResource("3_kqmm4")]

[node name="BackGround" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wmn2l")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_01y8u")]

[node name="GameTimer" type="Timer" parent="."]

[node name="PowerUpTimer" type="Timer" parent="."]
one_shot = true

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_i2ey1")

[node name="LevelSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_axg54")

[node name="EndSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_646fj")

[node name="PWSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ixcer")

[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
